--- a/papDjango/requirements.txt
+++ b/papDjango/requirements.txt
@@ -1,6 +1,14 @@
-django-mssql-backend
-django-filter
-django-crispy-forms 
-django-tables2
-djangorestframework
-ODBC Driver 13 for SQL Server
+asgiref==3.3.1
+beautifulsoup4==4.9.3
+Django==3.0.11
+django-bootstrap4==2.3.1
+django-crispy-forms==1.10.0
+django-filter==2.4.0
+django-mssql==1.8
+django-mssql-backend==2.8.1
+django-tables2==2.3.3
+djangorestframework==3.12.2
+pyodbc==4.0.30
+pytz==2020.4
+soupsieve==2.1
+sqlparse==0.4.1
